src/task/tools/extractor/snapshots/mob_rs__task__tools__extractor__tests__archive_format_from_extension.snap
---
source: src/task/tools/extractor/tests.rs
expression: extensions
---
[
    (
        "test.7z",
        Some(
            SevenZip,
        ),
    ),
    (
        "test.zip",
        Some(
            Zip,
        ),
    ),
    (
        "test.tar.gz",
        Some(
            TarGz,
        ),
    ),
    (
        "test.tgz",
        Some(
            TarGz,
        ),
    ),
    (
        "test.tar",
        Some(
            Tar,
        ),
    ),
    (
        "test.rar (unsupported)",
        None,
    ),
]
