src/task/tools/extractor/snapshots/mob_rs__task__tools__extractor__tests__extractor_builder_chaining.snap
---
source: src/task/tools/extractor/tests.rs
expression: tool
---
ExtractorTool {
    archive: Some(
        "/tmp/archive.zip",
    ),
    output_dir: Some(
        "/tmp/extracted",
    ),
    format: None,
    force: true,
    operation: Extract,
}
