src/task/tools/extractor/snapshots/mob_rs__task__tools__extractor__tests__extractor_builder_defaults.snap
---
source: src/task/tools/extractor/tests.rs
expression: tool
---
ExtractorTool {
    archive: None,
    output_dir: None,
    format: None,
    force: false,
    operation: Extract,
}
